@@ -74,4 +74,15 @@ public abstract class Foo implements Serializable {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description><![CDATA[
+@SuppressWarnings("serial")
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+@SuppressWarnings("serial")
+public class Foo implements Serializable {
+}
+     ]]></code>
+    </test-code>
 </test-data>
